--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                       baked into it, which clashed with the overlay text.
                       I've changed the placeholder to a simple green background by removing the text query.
                     -->
-                    <img class="h-56 w-full object-cover sm:h-72 md:h-96" src="https://placehold.co/1200x400/065f46/FFFFFF?text=" alt="Wildland Pest Control hero image">
+                    <img class="h-56 w-full object-cover sm:h-72 md:h-96" src="/photos/mouse.webp" alt="Wildland Pest Control hero image">
                     <div class="absolute inset-0 bg-gray-700 bg-opacity-60"></div>
                     <div class="absolute inset-0 flex items-center justify-center">
                         <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-white text-center px-4">
