Update image source in index.html
Replaced placeholder image with logo image.

--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                     <!-- Image -->
                     <div class="hidden md:block">
                         <!-- FIX: Changed placeholder color to match theme and removed text -->
-                        <img src="https://placehold.co/600x600/065f46/FFFFFF?text=" alt="Contact" class="h-full w-full object-cover">
+                        <img src="/photos/logo.webp" alt="Contact" class="h-full w-full object-cover">
                     </div>
                 </div>
             </div>
