--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                     <!-- Image -->
                     <div class="hidden md:block">
                         <!-- FIX: Changed placeholder color to match theme and removed text -->
-                        <img src="/photos/logo.webp" alt="Contact" class="h-full w-full object-cover">
+                        <img src="/photos/mouse.webp" alt="Contact" class="h-full w-full object-cover">
                     </div>
                 </div>
             </div>
