--- a/index.html
+++ b/index.html
@@ -543,25 +543,19 @@
                     <!-- Labels & SDS -->
                     <div class="p-6">
                         <h2 class="text-2xl font-semibold text-green-700 mb-4">Product Labels & SDS</h2>
-                        <p class="mb-4">Click to view or download the product labels and Safety Data Sheets (SDS) for products we use.</p>
+                        <p class="mb-4">Click to view or download the Safety Data Sheets (SDS) for products we use.</p>
                         <div class="space-y-3">
-                            <a href="#" class="flex items-center text-blue-600 hover:text-blue-800 hover:underline">
-                                <i data-lucide="file-text" class="h-5 w-5 mr-2"></i>
-                                Product 1 Label (Link)
-                            </a>
-                            <a href="#" class="flex items-center text-blue-600 hover:text-blue-800 hover:underline">
+                            <a href="/sds/contrac.pdf" class="flex items-center text-blue-600 hover:text-blue-800 hover:underline">
                                 <i data-lucide="file-text" class="h-5 w-5 mr-2"></i>
                                 Product 1 SDS (Link)
                             </a>
+                        
                             <div class="border-t my-3"></div>
-                            <a href="#" class="flex items-center text-blue-600 hover:text-blue-800 hover:underline">
-                                <i data-lucide="file-text" class="h-5 w-5 mr-2"></i>
-                                Product 2 Label (Link)
-                            </a>
-                            <a href="#" class="flex items-center text-blue-600 hover:text-blue-800 hover:underline">
+                            <a href="/sds/evolve.pdf" class="flex items-center text-blue-600 hover:text-blue-800 hover:underline">
                                 <i data-lucide="file-text" class="h-5 w-5 mr-2"></i>
                                 Product 2 SDS (Link)
                             </a>
+                            
                             <!-- Add more links as needed -->
                         </div>
                     </div>
